--- a/client/templates/inbox.html
+++ b/client/templates/inbox.html
@@ -7,7 +7,7 @@
   <div class="sidebar">
         <a href="{{ url_for('compose') }}" class="btn compose-btn"> ✉ 写邮件</a>
         <li class="active"><a href="{{ url_for('inbox') }}" class="btn compose-btn">📥 收件箱</a></li>
-        <a href="{{ url_for('sent') }}" class="btn compose-btn">📤 已发送</a></li>
+        <a href="{{ url_for('sent') }}" class="btn compose-btn">📤 已发送</a>
         <a href="{{ url_for('trash') }}" class="btn compose-btn">🗑️ 垃圾箱</a>
   </div>
 
