--- a/client/templates/view_email.html
+++ b/client/templates/view_email.html
@@ -18,8 +18,8 @@
       <ul>
           {% for attachment in email.attachments %}
           <li>
-              <a href="{{ url_for('download_file', filename=attachment.filename) }}">
-                  {{ attachment.filename }}
+              <a href="{{ url_for('download_attachment') }}?eml_path={{ email_file_path|urlencode }}&filename={{ attachment.original_filename|urlencode }}" download="{{ attachment.original_filename }}">
+                  {{ attachment.original_filename }}
               </a>
           </li>
           {% endfor %}
