--- a/client/templates/layout.html
+++ b/client/templates/layout.html
@@ -20,4 +20,5 @@
     </main>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
+<canvas id="particles"></canvas>
 </html>
