--- a/client/templates/view_email.html
+++ b/client/templates/view_email.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
+{% block body_class %}view-email-page{% endblock %}
+
 {% block title %}查看邮件{% endblock %}
 
 {% block content %}
